--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  padding: 40px;
+  background-color: #667a12;
+  color: white;
 }
 
 .App-logo {
@@ -35,4 +37,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.details {
+  margin-left: 870px;
+  /* text-align: right; */
+
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 20px;
+  background-color: white;
+  padding: 10px;
+  width: 600px;
+  border-radius: 200px;
+  color: black;
+}
+
+.connectButton {
+  margin-top: 300px;
+  margin-left: 620px;
+  color: white;
 }
