--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 .App {
   padding: 40px;
-  background-color: #667a12;
-  color: white;
+  background-color: wheat;
+  color: black;
 }
 
 .App-logo {
@@ -45,15 +45,15 @@
 
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 20px;
-  background-color: white;
+  background-color: black;
   padding: 10px;
   width: 600px;
   border-radius: 200px;
-  color: black;
+  color: white;
 }
 
 .connectButton {
   margin-top: 300px;
   margin-left: 620px;
-  color: white;
+  color: black;
 }
